--- a/public/index.html
+++ b/public/index.html
@@ -8,22 +8,12 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Rolwyn | Portfolio</title>
-  <meta name="description" content="Rolwyn Quadras's Resume">
+  <title>Lee's Assisted Living</title>
+  <meta name="description" content="Lee's Assisted Living">
 
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="Rolwyn | Portfolio">
-  <meta itemprop="description" content="Rolwyn Quadras's Resume">
-
-  <!-- Facebook Meta Tags -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Rolwyn | Portfolio">
-  <meta property="og:description" content="Rolwyn Quadras's Resume">
-
-  <!-- Twitter Meta Tags -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Rolwyn | Portfolio">
-  <meta name="twitter:description" content="Rolwyn Quadras's Resume">
+  <meta itemprop="name" content="Lee's Assisted Living">
+  <meta itemprop="description" content="Lee's Assisted Living">
 </head>
 
 <body>
